--- a/FLIPR-HACKATHON.ipynb
+++ b/FLIPR-HACKATHON.ipynb
@@ -284,7 +284,7 @@
     }
    ],
    "source": [
-    "xls = pd.ExcelFile('C:\\\\Users\\\\Shreya Singh\\\\Downloads\\\\Data.xlsx')\n",
+    "xls = pd.ExcelFile('C:\\\\Users\\\\Tanweer\\\\Downloads\\\\Data.xlsx')\n",
     "df1 = pd.read_excel(xls, 'Train_Data')\n",
     "df2 = pd.read_excel(xls, 'Test_Data')\n",
     "df1\n"
